--- a/Hackothon/CSS /layout.css
+++ b/Hackothon/CSS /layout.css
@@ -15,7 +15,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("images/South-African-Water-Crisis.jpg");
+    background-image: url("images/header.jpg");
     min-height: 100%;
 }
 
